# corydalis

./: .dir-locals.el  .gitignore  .markdownlint.json  .readthedocs.yaml  .stylish-haskell.yaml  .travis.yml  Application.hs  CHANGELOG.md  EmbeddedLibs.md  Foundation.hs  INSTALL.md  LICENCE  LICENCE-details  LICENCE.md  MANUAL.md  Makefile  Pics.hs  README.md  Settings.hs  TODO.md  Types.hs  corydalis.cabal  devel.hs  esbuild.js  eslint.config.js  hie.yaml  mkdocs.yml  package-lock.json  package.json  package.yaml  picman.cabal  stack.yaml
.github/workflows/: ci.yml
Handler/: Home.hs
Settings/: StaticFiles.hs
app/: db-util.hs  devel.hs  scanner.hs
assets/font-awesome/css/: fa-regular.css
config/: keter.yaml  keter.yml  models  routes  settings.yml.sample  test-settings.yml
deploy/: Procfile
docs/: devel.md  embeddedlibs.md  index.md  install.md  manual.md  todo.md
js/: .eslintrc.js  bundle-basic.js  bundle-basic.ts  bundle-plot.ts  bundle-table.ts  camerainfo.ts  camerastats.ts  curate.ts  fancybox.js  fancybox.ts  imagegrid.js  imagegrid.ts  lensinfo.ts  lensstats.ts  tablesorter-config.js  tablesorter-config.ts  tablesorter-uitheme-simple.js  tablesorter-uitheme-simple.ts  tsconfig.json  viewer.ts
src/: Application.hs  Cache.hs  Exif.hs  Foundation.hs  Import.hs  Indexer.hs  Model.hs  Pics.hs  Settings.hs  Stats.hs  Types.hs
src/Compat/: Orphans.hs
src/Handler/: Browse.hs  Camera.hs  Common.hs  Cookies.hs  Curate.hs  FlaggedImages.hs  Folder.hs  Home.hs  Image.hs  Items.hs  Lens.hs  LensInfo.hs  LensStats.hs  List.hs  Reload.hs  Search.hs  Settings.hs  Status.hs  Untracked.hs  Utils.hs  View.hs  Widgets.hs
src/Import/: NoFoundation.hs
src/Settings/: Development.hs  StaticFiles.hs
src/Utils/: Parsing.hs
static/bootstrap/js/: bootstrap.bundle.js
static/corydalis/: manifest.json
static/corydalis/css/: basic.css
static/corydalis/js/: fancybox.js  imagegrid.js  viewer.js
static/css/: basic.css  bootstrap.css  font-awesome.css  tablesorter.theme.bootstrap.css  theme.blue.css
static/fancybox/css/: fancybox.css  jquery.fancybox.css
static/fancybox/js/: jquery.fancybox.js
static/font-awesome/css/: fa-regular.css  fa-solid.css  fontawesome.css  regular.css  solid.css
static/hammer/js/: hammer.js
static/imagesloaded/js/: imagesloaded.pkgd.js
static/infinite-scroll/js/: infinite-scroll.pkgd.js
static/js/: tablesorter-config.js  tablesorter-uitheme-simple.js  uitheme-bootstrap-simple.js  viewer.js
static/masonry/js/: masonry.pkgd.js
static/plotly/js/: plotly-cartesian.js
static/screenfull/js/: screenfull.js
static/tablesorter/css/: theme.bootstrap.css  widget.grouping.min.css
templates/: about.hamlet  alldiv.hamlet  browse.hamlet  browsefolders.hamlet  browsefolders.julius  browseimages.hamlet  camerainfo.hamlet  camerainfo.julius  camerastats.hamlet  camerastats.julius  curate.hamlet  curate.julius  default-layout-wrapper.hamlet  default-layout.hamlet  exif.hamlet  flaggedimages.hamlet  folder.hamlet  folder.julius  homepage.hamlet  homepage.julius  image.hamlet  imagegrid.hamlet  imagelist.hamlet  imagelist.julius  itemdiv.hamlet  layout-wrapper.hamlet  lensinfo.hamlet  lensinfo.julius  lensstats.hamlet  lensstats.julius  listfolders.hamlet  listfolders.julius  listimages.hamlet  listitems.hamlet  listitems.julius  login.hamlet  message-widget.hamlet  newhome.hamlet  prevnext.hamlet  progressinfo.hamlet  (+14 more)
test/: CacheSpec.hs  ExifSpec.hs  FoundationSpec.hs  IndexerSpec.hs  Main.hs  PicsSpec.hs  StatsSpec.hs  TestImport.hs  TypesSpec.hs
test/Handler/: BrowseSpec.hs  CameraSpec.hs  CommonSpec.hs  CurateSpec.hs  FlaggedImagesSpec.hs  FolderSpec.hs  HomeSpec.hs  ImageSpec.hs  LensSpec.hs  ListSpec.hs  ReloadSpec.hs  SearchSpec.hs  SettingsSpec.hs  StatusSpec.hs  ViewSpec.hs
test/Utils/: ParsingSpec.hs
tests/: HomeTest.hs  TestImport.hs  main.hs
viewer/: package-lock.json  package.json  tsconfig.json  viewer.ts
(+4 files in other folders)
