name:              corydalis
version:           0.0.1
license:           AGPL-3
license-file:      COPYING
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Pics
                     Types

    hs-source-dirs:  src

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns

    build-depends: base                          >= 4.8        && < 5
                 , yesod                         >= 1.2.5      && < 1.5
                 , yesod-core                    >= 1.2        && < 1.5
                 , yesod-static                  >= 1.2        && < 1.6
                 , yesod-form                    >= 1.3        && < 1.5
                 , clientsession                 >= 0.8        && < 1.0
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 1.1
                 , wai-extra                     >= 2.1        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.0        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 2.1        && < 3.2
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.1.4      && < 2.5
                 , wai-logger                    >= 2.1        && < 2.3
                 , regex-pcre                    >= 0.94
                 , containers                    >= 0.5
                 , filepath                      >= 1.3
                 , unix                          >= 2.6
                 , time
                 , old-locale
                 , prefix-units                  >= 0.1        && < 0.2


executable         corydalis
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , corydalis
                     , yesod

    ghc-options:       -threaded -O2 -rtsopts

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , corydalis
                 , yesod-test >= 1.2 && < 1.3
                 , yesod-core
                 , yesod
                 , hspec
